Add Basic CannaCards, Library, ApiCalls, and work through Typescript

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,6 +4,7 @@
   justify-content: space-around;
   align-items: center; /* Add this line */
 }
+
 .header-content {
   width: 100%;
   max-width: 1200px; /* Adjust this value according to your needs */
@@ -13,8 +14,9 @@
 }
  .logo{
   margin: 2em;
-  height: 8vh;
+  height: 10vh;
  }
+
 .title-container{
   padding: 0 3vw 0 4vw;
   width:40vw;
@@ -22,10 +24,12 @@
   justify-content: flex-end;
   align-items: center;
 }
+
 .title{
   color: darkblue;
   font-size: 3vh;
 }
+
  .button-container{
   display: flex;
   flex-direction: column;
@@ -34,6 +38,17 @@
   align-items: center;
  }
  .header-buttons{
-  height: 3.5vh;
-  width: 14vw;
+  background-color:lightsteelblue;
+  border: 2px black solid;
+  color: black;
+  padding: 0.5rem 0.75rem;
+  margin-top: 0.25rem;
+  cursor: pointer;
+  border-radius: 5px;
+  -webkit-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
+  box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
  }
+ .header-buttons:hover{
+    background-color: lightblue;
+}
