--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,13 +15,18 @@
  .logo{
   margin: 2em;
   height: 10vh;
+  border-radius: 40px;
+  -webkit-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
+  box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
+  background-color: rgba(240, 248, 255, 0);
  }
 
 .title-container{
-  padding: 0 3vw 0 4vw;
+  padding: 0 0 0 0;
   width:40vw;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
