--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,21 +16,22 @@
   max-width: 1200px; /* Adjust this value according to your needs */
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
 }
  .logo{
-  margin: 1em;
   height: 8vh;
-  border-radius: 40px;
+  border-radius: 20px;
   -webkit-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
   box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
   background-color: rgba(240, 248, 255, 0);
  }
 
+
 .title-container{
-  padding: 0;
-  width:40vw;
+  padding-left: 10vw;
+  width:20vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,7 +46,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 35vw;
+  width: 20vw;
   align-items: center;
  }
  .header-buttons{
