--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,66 +2,100 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: rgba(173, 216, 230, 0.582);
   z-index: 100;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100%;
+  height: 13vh;
+}
+body {
+  margin: 0;
+  padding-top: 13vh; /* Adjust this value according to the header height */
+  height: 100%;
+  overflow: auto;
 }
 
 .header-content {
   width: 100%;
   max-width: 1200px; /* Adjust this value according to your needs */
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
- .logo{
-  height: 8vh;
+.logo {
+  height: 12vh;
   border-radius: 20px;
-  -webkit-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
-  box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 10px 14px 33px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 14px 33px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 14px 33px 1px rgba(0, 0, 0, 0.75);
   background-color: rgba(240, 248, 255, 0);
- }
+}
 
-
-.title-container{
-  padding-left: 10vw;
-  width:20vw;
+.title-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.title{
+.title {
   color: darkblue;
-  font-size: 2.5vh;
+  font-size: 5vh;
 }
 
- .button-container{
+.button-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  width: 20vw;
+  justify-content: space-around;
   align-items: center;
- }
- .header-buttons{
-  background-color:lightsteelblue;
-  border: 2px black solid;
-  color: black;
-  padding: 0.25rem 0.5rem;
-  margin-top: 0.25rem;
-  cursor: pointer;
-  border-radius: 5px;
-  -webkit-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
-  box-shadow: 10px 14px 33px 1px rgba(0,0,0,0.75);
- }
+  height: 13vh;
+}
 
- .header-buttons:hover{
-    background-color: lightblue;
+.header-buttons {
+  align-items: center;
+  appearance: none;
+  background-color: #fcfcfd;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395a;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 5vh;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+}
+
+.header-buttons:focus {
+  box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+}
+
+.header-buttons:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.header-buttons:active {
+  box-shadow: #d6d6e7 0 3px 7px inset;
+  transform: translateY(2px);
 }
