--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -12,7 +12,7 @@ body {
 body {
   overflow: auto;
   padding-top: 100px;
-  background-image: url("/Users/reidpoole/turing_work/4mod/blissful-blends/src/assets/stacked-waves-haikei (2).png");
+  background-image: url("/public/stacked-waves-haikei\ \(2\).png");
   background-position: center;
   background-size: cover;
 }
